modified entries to be listed in table. Resolved alignment issue.

--- a/syogesweb/static/css/main.css
+++ b/syogesweb/static/css/main.css
@@ -27,3 +27,7 @@ body {
    height:100px;   /* Height of the footer */
    background:transparent;
 }
+
+.table-borderless tr td{
+   border: none;
+}
